Fix footer spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -1971,7 +1971,7 @@ content: "\f106";
 
 	/* Footer */
 	.footer-decoration {
-		height: 60px;
+		height: 80px;
 	}
 	
 	.footer-decoration .footer-frame {
